Initial test suite

--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,19 @@
     "require": {
         "php": ">=7.1.0"
     },
+    "require-dev": {
+        "mockery/mockery": "^1.1",
+        "orchestra/testbench": "^3.8",
+        "phpunit/phpunit": "8.0"
+    },
     "autoload": {
         "psr-4": {
             "KirschbaumDevelopment\\Nova\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "KirschbaumDevelopment\\NovaInlineSelect\\Tests\\": "tests"
         }
     },
     "extra": {
